dts: 9820(25) - some improvements
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/arch/arm64/boot/dts/exynos/exynos9825.dts
+++ b/arch/arm64/boot/dts/exynos/exynos9825.dts
@@ -5206,15 +5206,15 @@
 		governor = "interactive";
 		interactive_info = <0x3f7a0 0x5e 0x0>;
 		gpu_dvfs_table_size = <0x9 0x8>;
-		gpu_dvfs_table = <0xab630 0x4e 0x64 0x9 0x1fefc8 0x163780 0x0 0x1bc560 0x9eb10 0x4e 0x62 0x5 0x1fefc8 0x163780 0x0 0x1fbd00 0x8ba60 0x4e 0x62 0x5 0x1b5fd0 0x0 0x0 0x0 0x69b68 0x4e 0x5f 0x1 0x14a140 0x0 0x0 0x0 0x5c0a8 0x4e 0x5a 0x1 0x14a140 0x0 0x0 0x0 0x4f588 0x4e 0x55 0x1 0xf78f0 0x0 0x0 0x0 0x3f7a0 0x4e 0x55 0x1 0xa50a0 0x0 0x0 0x0 0x30d40 0x4e 0x55 0x1 0xa50a0 0x0 0x0 0x0 0x186a0 0x0 0x55 0x1 0xa50a0 0x0 0x0 0x0>;
+		gpu_dvfs_table = <0xab630 0x4e 0x64 0x9 0x1fefc8 0x163780 0x0 0x1bc560 0x9eb10 0x4e 0x62 0x5 0x1fefc8 0x163780 0x0 0x1fbd00 0x8ba60 0x4e 0x62 0x5 0x1b5fd0 0x0 0x0 0x0 0x69b68 0x4e 0x5f 0x1 0x14a140 0x0 0x0 0x0 0x5c0a8 0x4e 0x5a 0x1 0x14a140 0x0 0x0 0x0 0x4f588 0x4e 0x55 0x1 0xf78f0 0x0 0x0 0x0 0x3f7a0 0x4e 0x55 0x1 0xa50a0 0x0 0x0 0x0 0x30d40 0x4e 0x55 0x1 0xa50a0 0x0 0x0 0x0 0x26160 0x0 0x55 0x1 0xa50a0 0x0 0x0 0x0>;
 		gpu_sustainable_info = <0x69b68 0x5f 0xe7b08 0x19c990 0x7ef40>;
 		gpu_pmqos_cpu_cluster_num = <0x3>;
 		gpu_pmu_status_reg_offset = <0x2104>;
 		gpu_pmu_status_local_pwr_mask = <0x1>;
 		gpu_max_clock = <0xab630>;
 		gpu_max_clock_limit = <0xab630>;
-		gpu_min_clock = <0x30d40>;
-		gpu_min_clock_limit = <0x30d40>;
+		gpu_min_clock = <0x26160>;
+		gpu_min_clock_limit = <0x26160>;
 		gpu_dvfs_start_clock = <0x3f7a0>;
 		gpu_dvfs_bl_config_clock = <0x30d40>;
 		gpu_default_voltage = <0xb8a1a>;        // 0xc3500
@@ -9678,7 +9678,7 @@
 			emc_mode_0 {
 				mode_name = "QUAD";
 				cpus = "0-7";
-				max_freq = <0x1fbd00>;  // 0x1fbd00
+				max_freq = <0x23b4a0>;  // 0x1fbd00
 				boost_cpus = "6-7";
 				change_latency = <0xf>;
 				enabled = <0x1>;
@@ -9688,7 +9688,7 @@
 				mode_name = "DUAL";
 				cpus = "0-3,6-7";
 				boost_cpus = "6-7";
-				max_freq = <0x23b4a0>;  // 0x23b4a0
+				max_freq = <0x269ad0>;  // 0x23b4a0
 				change_latency = <0x1e>;
 				ldsum_thr = <0x4b0>;
 				enabled = <0x1>;
@@ -9720,18 +9720,18 @@
 				domain_name = "MID";
 				cpus = "4-5";
 				role = <0x1>;
-				cpu_heavy_thr = <0x12c>;    // 0x1f4
+				cpu_heavy_thr = <0x190>;    // 0x1f4, 12c
 				cpu_idle_thr = <0xc8>;
-				busy_ratio = <0x20>;        // 0x0
+				busy_ratio = <0x10>;        // 0x0
 			};
 
 			emc_domain_2 {
 				domain_name = "BIG";
 				cpus = "6-7";
 				role = <0x3>;
-				cpu_heavy_thr = <0x163>;    // 0x28a
+				cpu_heavy_thr = <0x12c>;    // 0x28a, 163
 				cpu_idle_thr = <0xfa>;
-				busy_ratio = <0x10>;        // 0x0
+				busy_ratio = <0x05>;        // 0x0
 			};
 		};
 	};
@@ -9741,7 +9741,7 @@
 		domain@0 {
 			device_type = "schedutil-domain";
 			shared-cpus = "0-3";
-			enabled = <0x1>;        // 0x0
+			enabled = <0x0>;        // 0x0
 			qos_min_class = <0x3>;
 			linux,phandle = <0x2c5>;
 			phandle = <0x2c5>;
@@ -10433,7 +10433,7 @@
 				};
 
 				mid-control-temp {
-					temperature = <0x11170>;
+					temperature = <0x14438>;
 					hysteresis = <0x1388>;
 					type = "passive";
 					linux,phandle = <0x110>;
