ts_config: set CONFIG_HZ at 50Hz, enable serial USB, disable LLVM_POLLY
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -51,10 +51,10 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_PHY_EXYNOS_DP_DEBUGFS is not set
 
 ## HZ settings
-CONFIG_HZ_25=y
-CONFIG_HZ=25
-# CONFIG_HZ_50 is not set
-## CONFIG_HZ=50
+## CONFIG_HZ_25=y
+# CONFIG_HZ is not set
+CONFIG_HZ_50=y
+CONFIG_HZ=50
 # CONFIG_HZ_100 is not set
 ## CONFIG_HZ=100
 # CONFIG_HZ_250 is not set
@@ -96,6 +96,7 @@ CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_TCP_CONG_HTCP=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_BBR2=y
 
 ## TCP WINDOW 64kb
 CONFIG_LARGE_TCP_INITIAL_BUFFER=y
@@ -110,7 +111,7 @@ CONFIG_CPU_FREQ_GOV_TS_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_SCHEDUTIL is not set
 # CONFIG_CPU_FREQ_GOV_Runutil is not set
 # CONFIG_CPU_FREQ_GOV_PIXEL_SCHEDUTIL is not set
-CONFIG_FREQVAR_TUNE=y
+# CONFIG_FREQVAR_TUNE is not set
 # CONFIG_CPU_FREQ_SUSPEND is not set
 
 ## I/O SCHEDULERS
@@ -295,5 +296,11 @@ CONFIG_THERMAL_EMULATION=y
 CONFIG_FINGERPRINT_BOOST=y
 
 ## POLLY LLVM
-CONFIG_LLVM_POLLY=y
+# CONFIG_LLVM_POLLY is not set
+
+## USB SERIAL
+CONFIG_USB_SERIAL_CONSOLE=y
+CONFIG_USB_SERIAL_GENERIC=y
+# natively support nodemcu/arduino serial console
+CONFIG_USB_SERIAL_CP210X=y
 
