--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -67,6 +67,7 @@ CONFIG_HZ=50
 ## FAIR Scheuler tunables
 CONFIG_PELT_UTIL_HALFLIFE_32=y
 # CONFIG_PELT_UTIL_HALFLIFE_16 is not set
+# CONFIG_PELT_UTIL_HALFLIFE_12 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_10 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 
