added Clang 11.0.5 - cal-if: disable sizeof-pointer-div warnings
org commit: https://github.com/xawex465/android_kernel_samsung_beyondlte/commit/dae490142d496efb8afa251b2c7755c8b9a06cab#diff-84c0d0c5974298247b8e4d1205aa4938e0562a89a58068da43fc18024f59a573R11

Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/build
+++ b/build
@@ -13,7 +13,8 @@ toolchain = {
     'default': {
         'CROSS_COMPILE': 'toolchain/default/gcc-cfp/gcc-cfp-jopp-only/aarch64-linux-android-4.9/bin/aarch64-linux-android-',
         'CLANG_TRIPLE': 'toolchain/default/clang/host/linux-x86/clang-4639204-cfp-jopp/bin/aarch64-linux-gnu-',
-        'CC': 'toolchain/default/clang/host/linux-x86/clang-4639204-cfp-jopp/bin/clang'
+        'CC': 'toolchain/clang-11/host/linux-x86/clang-r399163b/bin/clang'
+        # 'CC': 'toolchain/default/clang/host/linux-x86/clang-4639204-cfp-jopp/bin/clang'
     },
     'cruel': {
         'CROSS_COMPILE': 'toolchain/cruel/bin/aarch64-cruel-elf-'
@@ -22,6 +23,11 @@ toolchain = {
         'CROSS_COMPILE': 'toolchain/samsung/gcc-cfp/gcc-cfp-jopp-only/aarch64-linux-android-4.9/bin/aarch64-linux-android-',
         'CLANG_TRIPLE': 'toolchain/samsung/clang/host/linux-x86/clang-r349610-jopp/bin/aarch64-linux-gnu-',
         'CC': 'toolchain/samsung/clang/host/linux-x86/clang-r349610-jopp/bin/clang'
+    },
+    'clang-11': {
+        'CROSS_COMPILE': 'toolchain/samsung/gcc-cfp/gcc-cfp-jopp-only/aarch64-linux-android-4.9/bin/aarch64-linux-android-',
+        'CLANG_TRIPLE': 'toolchain/clang-11/clang/host/linux-x86/clang-r399163b/bin/aarch64-linux-gnu-',
+        'CC': 'toolchain/clang-11/host/linux-x86/clang-r399163b/bin/clang'
     },
     'proton': {
         'CROSS_COMPILE': 'toolchain/proton/bin/aarch64-linux-gnu-',
