--- a/drivers/soc/samsung/cal-if/Makefile
+++ b/drivers/soc/samsung/cal-if/Makefile
@@ -24,6 +24,8 @@ obj-$(CONFIG_SOC_EXYNOS9810)            += exynos9810/cal_data.o
 
 ifndef CONFIG_SOC_EXYNOS9820_EVT0
 obj-$(CONFIG_SOC_EXYNOS9820)            += exynos9820/cal_data.o
+# not gonna even bother with this
+ccflags-y							+= $(call cc-disable-warning, sizeof-pointer-div)
 else
 obj-$(CONFIG_SOC_EXYNOS9820_EVT0)            += exynos9820_evt0/cal_data.o
 endif
